third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/calculator.decompiled.baseline.exp
processed 8 tasks
task 0 lines 3-102:  publish [module 0x66::calculator {]
Error: compilation errors:
 error: cannot select field `_0` since it has different types in variants of enum `State`
    ┌─ TEMPFILE:100:11
    │
100 │         *&_v1._0
    │           ^^^
    │
    = field `_0` has type `|u64|u64 has copy + drop + store` in variant `Continuation` and type `u64` in variant `Value`


task 1 lines 105-105:  run 0x66::calculator::init_module --signers 0x66
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 2 lines 107-107:  run 0x66::calculator::number --signers 0x66 --args 10
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 3 lines 109-109:  run 0x66::calculator::add --signers 0x66
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 4 lines 111-111:  run 0x66::calculator::number --signers 0x66 --args 20
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 5 lines 113-113:  run 0x66::calculator::sub --signers 0x66
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 6 lines 115-115:  run 0x66::calculator::number --signers 0x66 --args 5
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 7 lines 117-117:  run 0x66::calculator::view --signers 0x66
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
